--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "jasmine",
+    "sayHello" : "echo 'Hello World'"
   },
   "keywords": [],
   "author": "",
